[project]
name = "terafetch"
version = "0.2.0"
description = "Batch downloader and IDM link exporter for TeraBox mirrors"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
video = [
    "yt-dlp>=2023.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
